--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "migrate:deploy": "npx prisma migrate deploy",
     "generate": "npx prisma generate",
     "postinstall": "npm run generate",
+    "seed": "node prisma/seeder/index.js",
     "test:db:prepare": "NODE_ENV=test DATABASE_URL='file:./test.db' npx prisma db push --schema prisma/schema.test.prisma",
     "pretest": "npm run test:db:prepare",
     "test": "jest --runInBand"
@@ -16,12 +17,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@prisma/client": "^6.18.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "supertest": "^7.1.4",
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "prisma": "^6.18.0",
+    "supertest": "^7.1.4"
   }
 }
