--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ build:
     - cd build
   script:
     - npm ci --cache .npm --prefer-offline
-    - pulumi stack select "$BRANCH_NAME"
+    - pulumi stack select "$BRANCH_NAME" || pulumi stack init "$BRANCH_NAME" --non-interactive
     - pulumi up --yes
     - echo "IMAGE_NAME=$(pulumi stack output imageName)" > build.env
     - echo "IMAGE_DIGEST=$(pulumi stack output repoDigest)" >> build.env
@@ -79,7 +79,7 @@ deploy:
     - cd deploy
   script:
     - npm ci --cache .npm --prefer-offline
-    - pulumi stack select "$BRANCH_NAME"
+    - pulumi stack select "$BRANCH_NAME" || pulumi stack init "$BRANCH_NAME" --non-interactive
     - pulumi up --yes
     - PROJECT=$(pulumi stack output project)
     - REGION=$(pulumi stack output region)
