--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,9 @@ stages: [test, build, deploy]
 variables:
   BRANCH_NAME: "$CI_COMMIT_REF_NAME"
 
+include:
+  - template: Jobs/Dependency-Scanning.gitlab-ci.yml
+
 test:
   stage: test
   image: node:22-alpine
