--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,150 +1,145 @@
+# You can override the included template(s) by including variable overrides
+# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
+# Secret Detection customization: https://docs.gitlab.com/user/application_security/secret_detection/pipeline/configure
+# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
+# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
+# Note that environment variables can be set in several places
+# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
-  - test
-  - build
-  - deploy
-
+- test
 include:
-  - template: Jobs/Dependency-Scanning.gitlab-ci.yml # gemnasium-dependency_scanning
-  - template: Jobs/Secret-Detection.gitlab-ci.yml # secret_detection
-  - template: Jobs/SAST.gitlab-ci.yml # semgrep-sast
-  - template: Jobs/SAST-IaC.gitlab-ci.yml # kics-iac-sast
-
+- template: Security/Dependency-Scanning.gitlab-ci.yml
 variables:
   BRANCH_NAME: "$CI_COMMIT_REF_NAME"
-
 gemnasium-dependency_scanning:
   variables:
-    DS_SCAN_PATHS: "app,environments"
+    DS_SCAN_PATHS: app,environments
     DS_MAX_DEPTH: 15
     DS_EXCLUDED_PATHS: "**/node_modules/**,**/dist/**,**/build/**"
-    DS_INCLUDE_DEV_DEPENDENCIES: "true"
-    DS_REMEDIATE: "false" # do not try to generate MRs with fixes
-
+    DS_INCLUDE_DEV_DEPENDENCIES: 'true'
+    DS_REMEDIATE: 'false'
 secret_detection:
   variables:
-    SECRET_DETECTION_SCAN_PATHS: "app,environments"
-    SECRET_DETECTION_HISTORIC_SCAN: "false" # fast per-commit scans
-    SECRET_DETECTION_RULESET: "true" # enable custom rules
-
+    SECRET_DETECTION_SCAN_PATHS: app,environments
+    SECRET_DETECTION_HISTORIC_SCAN: 'false'
+    SECRET_DETECTION_RULESET: 'true'
 semgrep-sast:
   variables:
-    SAST_INCLUDED_PATHS: "app/**,environments/**" # target app and Pulumi IaC code
-    SAST_EXCLUDED_PATHS: "node_modules/**" # do not waste time on deps/build outputs
-
+    SAST_INCLUDED_PATHS: app/**,environments/**
+    SAST_EXCLUDED_PATHS: node_modules/**
 kics-iac-sast:
   variables:
-    IAC_SCAN_PATHS: "environments,Dockerfile"# # target Pulumi IaC and app Dockerfile 
+    IAC_SCAN_PATHS: environments,Dockerfile
     SEARCH_MAX_DEPTH: 15
-    SAST_EXCLUDED_PATHS: "node_modules/**"
-
+    SAST_EXCLUDED_PATHS: node_modules/**
 test:
   stage: test
   image: node:22-alpine
   variables:
-    NODE_ENV: "test"
-    DATABASE_URL: "file:./test.db"
-  cache: # reuse deps between pipelines
+    NODE_ENV: test
+    DATABASE_URL: file:./test.db
+  cache:
     key:
-      files: [app/package-lock.json] # refresh cache when lockfile changes
+      files:
+      - app/package-lock.json
     paths:
-      - app/node_modules/ # cache installed modules
-      - app/.npm/ # cache npm package tarballs
-    policy: pull-push # pull existing cache before job; update it after completion
+    - app/node_modules/
+    - app/.npm/
+    policy: pull-push
   before_script:
-    - cd app
+  - cd app
   script:
-    - npm ci --cache .npm --prefer-offline # install deps using cached packages when available
-    - npm test -- --ci # npm stops parsing flags; runs Jest in CI mode
-
+  - npm ci --cache .npm --prefer-offline
+  - npm test -- --ci
 build:
   stage: build
   image: pulumi/pulumi-nodejs:3.205.0
   environment:
-    name: $BRANCH_NAME # defines the deployment environment (dev, stage, prod) so GitLab injects environment-scoped variables
+    name: "$BRANCH_NAME"
   services:
-    - docker:28.5.1-dind
+  - docker:28.5.1-dind
   variables:
-    DOCKER_TLS_CERTDIR: "" # disable TLS → simpler for local DinD
-    DOCKER_HOST: "tcp://docker:2375"
+    DOCKER_TLS_CERTDIR: ''
+    DOCKER_HOST: tcp://docker:2375
   cache:
     key:
-      files: [environments/package-lock.json]
+      files:
+      - environments/package-lock.json
     paths:
-      - environments/node_modules/
-      - environments/build/.npm/
+    - environments/node_modules/
+    - environments/build/.npm/
     policy: pull-push
   before_script:
-    - cd environments
-    - echo "$GOOGLE_CREDENTIALS_B64" | base64 -d > ./credentials/service-account-key.json
-    - export GOOGLE_APPLICATION_CREDENTIALS="$(pwd)/credentials/service-account-key.json"
-    - cd build
+  - cd environments
+  - echo "$GOOGLE_CREDENTIALS_B64" | base64 -d > ./credentials/service-account-key.json
+  - export GOOGLE_APPLICATION_CREDENTIALS="$(pwd)/credentials/service-account-key.json"
+  - cd build
   script:
-    - npm ci --cache .npm --prefer-offline
-    - pulumi stack select "$BRANCH_NAME" || pulumi stack init "$BRANCH_NAME" --non-interactive # temporary safeguard — remove 'stack init' once all env stacks are created
-    - pulumi up --yes
-    - echo "IMAGE_NAME=$(pulumi stack output imageName)" > build.env
-    - echo "IMAGE_DIGEST=$(pulumi stack output repoDigest)" >> build.env
-  artifacts: # define files to be passed between jobs (e.g. env vars, binaries, reports)
+  - npm ci --cache .npm --prefer-offline
+  - pulumi stack select "$BRANCH_NAME" || pulumi stack init "$BRANCH_NAME" --non-interactive
+  - pulumi up --yes
+  - echo "IMAGE_NAME=$(pulumi stack output imageName)" > build.env
+  - echo "IMAGE_DIGEST=$(pulumi stack output repoDigest)" >> build.env
+  artifacts:
     reports:
       dotenv: environments/build/build.env
-  only: # run this job only for these branches (dev, stage, prod)
-    - dev
-    - stage
-    - prod
-
+  only:
+  - dev
+  - stage
+  - prod
 deploy:
   stage: deploy
   image: pulumi/pulumi-nodejs:3.205.0
   environment:
-    name: $BRANCH_NAME
+    name: "$BRANCH_NAME"
   needs:
-    - job: build # allows this job to start as soon as 'build' finishes and access its artifacts
+  - job: build
   cache:
     key:
-      files: [environments/package-lock.json]
+      files:
+      - environments/package-lock.json
     paths:
-      - environments/node_modules/
-      - environments/deploy/.npm/
+    - environments/node_modules/
+    - environments/deploy/.npm/
     policy: pull-push
   before_script:
-    - cd environments
-    - echo "$GOOGLE_CREDENTIALS_B64" | base64 -d > ./credentials/service-account-key.json
-    - export GOOGLE_APPLICATION_CREDENTIALS="$(pwd)/credentials/service-account-key.json"
-    - cd deploy
+  - cd environments
+  - echo "$GOOGLE_CREDENTIALS_B64" | base64 -d > ./credentials/service-account-key.json
+  - export GOOGLE_APPLICATION_CREDENTIALS="$(pwd)/credentials/service-account-key.json"
+  - cd deploy
   script:
-    - npm ci --cache .npm --prefer-offline
-    - pulumi stack select "$BRANCH_NAME" || pulumi stack init "$BRANCH_NAME" --non-interactive # temporary safeguard — remove 'stack init' once all env stacks are created
-    - pulumi up --yes
-    - PROJECT=$(pulumi stack output project)
-    - REGION=$(pulumi stack output region)
-    - JOB_NAME=$(pulumi stack output seedJobName)
-    - echo "GCP_PROJECT=$PROJECT" > deploy.env
-    - echo "GCP_REGION=$REGION" >> deploy.env
-    - echo "SEED_JOB_NAME=$JOB_NAME" >> deploy.env
+  - npm ci --cache .npm --prefer-offline
+  - pulumi stack select "$BRANCH_NAME" || pulumi stack init "$BRANCH_NAME" --non-interactive
+  - pulumi up --yes
+  - PROJECT=$(pulumi stack output project)
+  - REGION=$(pulumi stack output region)
+  - JOB_NAME=$(pulumi stack output seedJobName)
+  - echo "GCP_PROJECT=$PROJECT" > deploy.env
+  - echo "GCP_REGION=$REGION" >> deploy.env
+  - echo "SEED_JOB_NAME=$JOB_NAME" >> deploy.env
   artifacts:
     reports:
       dotenv: environments/deploy/deploy.env
   only:
-    - dev
-    - stage
-    - prod
-
-seed: # triggers a Cloud Run job that inserts fake data into the database
+  - dev
+  - stage
+  - prod
+seed:
   stage: deploy
   image: google/cloud-sdk:546.0.0-slim
   environment:
-    name: $BRANCH_NAME
+    name: "$BRANCH_NAME"
   needs:
-    - job: deploy
+  - job: deploy
   before_script:
-    - cd environments
-    - echo "$GOOGLE_CREDENTIALS_B64" | base64 -d > ./credentials/service-account-key.json
-    - gcloud auth activate-service-account --key-file=./credentials/service-account-key.json
-    - gcloud config set project "$GCP_PROJECT"
+  - cd environments
+  - echo "$GOOGLE_CREDENTIALS_B64" | base64 -d > ./credentials/service-account-key.json
+  - gcloud auth activate-service-account --key-file=./credentials/service-account-key.json
+  - gcloud config set project "$GCP_PROJECT"
   script:
-    - gcloud run jobs execute "$SEED_JOB_NAME" --region="$GCP_REGION" --wait
-  allow_failure: false # fail pipeline if seeding fails
-  when: on_success # run automatically after successful deploy
+  - gcloud run jobs execute "$SEED_JOB_NAME" --region="$GCP_REGION" --wait
+  allow_failure: false
+  when: on_success
   only:
-    - dev
-    - stage
+  - dev
+  - stage
