--- a/.gitlab/secret-detection-ruleset.toml
+++ b/.gitlab/secret-detection-ruleset.toml
@@ -1,9 +1,9 @@
-title = "Custom rules to extend GitLab Secret Detection"
+# .gitlab/secret-detection-ruleset.toml
 
 [[rules]]
-id = "dbpassword-detection"
-description = "Catch dbPassword assignments"
-regex = '''(?i)\b(dbpassword)\b\s*[:=]\s*["'][^"'\n]{8,}["']'''
-path = '''\.(js|ts)$'''
+id = "hardcoded-password-js-ts"
+description = "Detects hardcoded passwords in JavaScript and TypeScript files"
+regex = '''(?i)\b(?:dbpassword|password|passwd|pwd)\b\s*[:=]\s*["'](?P<secret>[^"'\n]{8,})["']'''
+path = '''\.(js|jsx|ts|tsx)$'''
 entropy = 0
-tags = ["password","assignment","db"]
+keywords = ["dbpassword","password","passwd","pwd"]
