--- a/.gitlab/secret-detection-ruleset.toml
+++ b/.gitlab/secret-detection-ruleset.toml
@@ -1,14 +1,6 @@
-# Extend GitLab's default Gitleaks config, then add our own rule(s)
-title = "Extend default secret rules with JS/TS password assignment"
-
-[extend]
-# This magic path tells the analyzer to start from the built-in default rules
-path = "/gitleaks.toml"
-
-[[rules]]
-id = "dbpassword-assignment-js-ts"
-description = "Detects hardcoded dbPassword assignments in JavaScript and TypeScript files (demo rule)"
-keywords = ["dbpassword"]
-regex = '''(?i)\bdbpassword\b\s*[:=]\s*["'](?P<secret>[^"'\n]{8,})["']'''
-path = '''\.(js|jsx|ts|tsx)$'''
-entropy = 0
+# .gitlab/secret-detection-ruleset.toml
+[secrets]
+  [[secrets.passthrough]]
+    type   = "file"
+    target = "gitleaks.toml"
+    value  = "extended-gitleaks-config.toml"
