--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ gemnasium-dependency_scanning:
 
 secret_detection:
   variables:
-    SECRET_DETECTION_SCAN_PATHS: "app,environments"
+    SECRET_DETECTION_SCAN_PATHS: "app/**,environments/**"
     SECRET_DETECTION_HISTORIC_SCAN: "false" # fast per-commit scans
     SECRET_DETECTION_RULESET: "true" # enable custom rules
 
