--- a/extended-gitleaks-config.toml
+++ b/extended-gitleaks-config.toml
@@ -8,4 +8,4 @@ path = "/gitleaks.toml"
   description = "Detects hardcoded dbPassword assignments"
   # very simple case-insensitive regex for demonstration
   regex = '''(?i)dbpassword'''
-  path = '''^(app|environments)/.*\.(js|jsx|ts|tsx)$'''
+  path = '''^(app|environments)/'''
